[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "referencing-shim"
version = "0.37.0"
description = "Pure-Python ctypes-free referencing shim for HarmonyOS"
license = {text = "BSD"}
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
